@@ -68,7 +68,9 @@ public:
   virtual unsigned filter(FilterCallback callback);
 
   virtual std::ostream& print(std::ostream& o, const char* first, const char* sep, const char* last) const;
+  virtual std::ostream& printWithoutPrefix(std::ostream& o, const char* first, const char* sep, const char* last) const;
   virtual std::ostream& print(std::ostream& o) const;
+  virtual std::ostream& printWithoutPrefix(std::ostream& o) const;
   virtual std::ostream& printAsFacts(std::ostream& o) const;
 
   void add(const Interpretation& other);
