@@ -52,15 +52,6 @@
 	std::cerr << std::endl; \
 	LOG(DBG, "idb end");
 
-/*
-#define LOG_REGISTRY_PROGRAM(ctx) \
-  LOG(*ctx.registry); \
-	RawPrinter printer(std::cerr, ctx.registry); \
-	std::cerr << "edb = " << *ctx.edb << std::endl; \
-	LOG("idb"); \
-	printer.printmany(ctx.idb,"\n"); \ 
-	std::cerr << std::endl; \
-	LOG("idb end");*/
 
 DLVHEX_NAMESPACE_USE
 
@@ -90,7 +81,7 @@ BOOST_AUTO_TEST_CASE(testInconsistentProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -98,7 +89,6 @@ BOOST_AUTO_TEST_CASE(testInconsistentProgram)
 
   MLPSolver m(ctx);
   m.solve(); 
-  //rmv. BOOST_REQUIRE ( m.AS.size() == 0 );
   BOOST_REQUIRE ( m.ctrAS == 0 );
   LOG(DBG, "Test Inconsistent Program finish"); 
 }
@@ -129,7 +119,7 @@ BOOST_AUTO_TEST_CASE(testNoticStratifiedProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -137,7 +127,6 @@ BOOST_AUTO_TEST_CASE(testNoticStratifiedProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == false );
-  //rmv.  BOOST_REQUIRE ( m.AS.size() == 0 );
   BOOST_REQUIRE ( m.ctrAS == 0 );
   LOG(DBG, "Test Not ic Stratified Program finish");
 
@@ -181,7 +170,7 @@ BOOST_AUTO_TEST_CASE(testOneMainModules)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -189,7 +178,6 @@ BOOST_AUTO_TEST_CASE(testOneMainModules)
 
   MLPSolver m(ctx);
   m.solve();
-//  BOOST_REQUIRE( m.AS.size() == 2 );
   BOOST_REQUIRE( m.ctrAS == 2 );
   LOG(DBG, "Test One Main Modules finish");
 }
@@ -231,7 +219,7 @@ BOOST_AUTO_TEST_CASE(testTwoMainModules)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -239,7 +227,6 @@ BOOST_AUTO_TEST_CASE(testTwoMainModules)
 
   MLPSolver m(ctx);
   m.solve();
-  //rmv. BOOST_REQUIRE( m.AS.size() == 4 );
   BOOST_REQUIRE( m.ctrAS == 4 );
   LOG(DBG, "Test Two Main Modules finish");
 }
@@ -281,7 +268,7 @@ BOOST_AUTO_TEST_CASE(testTwoModuleCalls1)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -289,7 +276,6 @@ BOOST_AUTO_TEST_CASE(testTwoModuleCalls1)
 
   MLPSolver m(ctx);
   m.solve();
-  //rmv. BOOST_REQUIRE( m.AS.size() == 2 );
   BOOST_REQUIRE( m.ctrAS == 2 );
   LOG(DBG, "Test Two Module Calls 1 finish");
 }
@@ -331,7 +317,7 @@ BOOST_AUTO_TEST_CASE(testTwoModuleCalls2)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -339,7 +325,6 @@ BOOST_AUTO_TEST_CASE(testTwoModuleCalls2)
 
   MLPSolver m(ctx);
   m.solve();
-  //rmv. BOOST_REQUIRE( m.AS.size() == 2 );
   BOOST_REQUIRE( m.ctrAS == 2 );
   LOG(DBG, "Test Two Module Call 2 finish");
 }
@@ -370,7 +355,7 @@ BOOST_AUTO_TEST_CASE(testReachabilityNonGroundProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -378,7 +363,6 @@ BOOST_AUTO_TEST_CASE(testReachabilityNonGroundProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == true );
-  // std::cerr << "size a: " << m.AS.size() << std::endl;
   BOOST_REQUIRE ( m.ctrAS == 1 );
   LOG(DBG, "Test Reachability Non Ground Program finish");
 }
@@ -409,7 +393,7 @@ BOOST_AUTO_TEST_CASE(testCardinalityProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -417,7 +401,6 @@ BOOST_AUTO_TEST_CASE(testCardinalityProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == true );
-  //rmv. BOOST_REQUIRE ( m.AS.size() == 16 );
   BOOST_REQUIRE ( m.ctrAS == 16 );
   LOG(DBG, "Test Cardinality Program finish");
 }
@@ -448,7 +431,7 @@ BOOST_AUTO_TEST_CASE(testABBAProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -456,7 +439,6 @@ BOOST_AUTO_TEST_CASE(testABBAProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == true );
-  //rmv. BOOST_REQUIRE ( m.AS.size() == 2 );
   BOOST_REQUIRE ( m.ctrAS == 2 );
   LOG(DBG, "Test ABBA Program finish");
 }
@@ -487,7 +469,7 @@ BOOST_AUTO_TEST_CASE(testDisjunctionProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -495,7 +477,6 @@ BOOST_AUTO_TEST_CASE(testDisjunctionProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == true );
-  //rmv. BOOST_REQUIRE ( m.AS.size() == 2 );
   BOOST_REQUIRE ( m.ctrAS == 2 );
   LOG(DBG, "Test Disjunction Program finish");
 }
@@ -527,7 +508,7 @@ BOOST_AUTO_TEST_CASE(testNegationProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -535,7 +516,6 @@ BOOST_AUTO_TEST_CASE(testNegationProgram)
 
   MLPSolver m(ctx);
   BOOST_REQUIRE ( m.solve() == true );
-  //rmv. BOOST_REQUIRE ( m.AS.size() == 0 );
   BOOST_REQUIRE ( m.ctrAS == 0 );
   LOG(DBG, "Test Negation Program finish");
 }
@@ -567,7 +547,7 @@ BOOST_AUTO_TEST_CASE(testHanoiProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
@@ -617,7 +597,7 @@ BOOST_AUTO_TEST_CASE(testBigProgram)
   BasicHexParser parser;
   BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
   // after parser, print ctx
-  LOG_REGISTRY_PROGRAM(ctx);
+  //...LOG_REGISTRY_PROGRAM(ctx);
 
   // syntax verifying:
   ModuleSyntaxChecker sC(ctx);
